--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body{
     width:900px;
+    background-color: azure;
 }
 h1{
     margin: auto;
@@ -19,6 +20,7 @@ input{
     margin: auto;
     text-align: center;
     margin-bottom: 1em;
+    box-shadow: 5px 5px;
 }
 .todo{
     background-color: red;
@@ -37,6 +39,7 @@ input{
     border: 3px solid black;
     float: left;
     margin-right: .5em;
+    box-shadow: 5px 5px;
 }
 #complete-items{
     overflow: hidden;
@@ -44,6 +47,7 @@ input{
     width:400px;
     border: 3px solid black;
     float: left;
+    box-shadow: 5px 5px;
 }
 
 
